--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.37.1",
     "axios": "^1.3.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
