--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.10",
     "@mui/styles": "^5.11.9",
+    "@mui/x-date-pickers": "^6.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.37.1",
     "axios": "^1.3.3",
+    "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-device-detect": "^2.2.3",
