--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": {
     "name": "Jinesh Mehta"
   },
+  "homepage": "http://sanralpharma.com",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
